Bilder Namen Geändert

--- a/Aufgabe_1.4/style.css
+++ b/Aufgabe_1.4/style.css
@@ -179,12 +179,12 @@ div > b{
     }
 
 
-    #Glas{
+    #Ohrringe{
         width:300px;
         height:350px;
     }
 
-    #Figuren{
+    #Kater{
         width:300px;
         height:350px;
     }
@@ -195,7 +195,7 @@ div > b{
     }
 
     #Ich{
-        width:300px;
+        width:250px;
         height:200px;
     }
 
