--- a/Aufgabe_2.3/style.css
+++ b/Aufgabe_2.3/style.css
@@ -1,4 +1,3 @@
-/*Überschrift*/
 body {
     background: lightblue;
     font-family: sans-serif;
@@ -10,10 +9,21 @@ h1 {
     font-size: 25px;
 }
 
+p {
+    color: darkorchid;
+    text-align: center;
+    font-size: 20px;
+}
+
+i {
+    color: darkorchid;
+    text-align: left;
+    font-size: 20px;
+}
+
 div {
-    border-width: thin;
     background-color: whitesmoke;
-    width: 450px;
+    width: auto;
 }
 
 label {
@@ -31,8 +41,53 @@ select {
 button {
     font-size: 15px;
     background-color:lightblue;
+    text-align: center;
+    vertical-align: middle;
 }
 
-canvas {
-    align-self: right;
+div.Absätze {
+    display: block;
 }
+
+img {
+    display: block;
+    width: 100x;
+    height: 100px;
+
+}
+
+
+@media only screen and (min-width:601px) and (max-width: 1023px){
+
+    label, select, button, p, i {
+        font-size: 18px;
+    }
+
+    h1 {
+        font-size: 20px;
+    }
+
+}
+
+@media only screen and (max-width:600px){
+
+    label, select, button, p, i {
+        font-size: 15px;
+    }
+
+    #Kreis{
+        width:100px;
+        height:100px;
+    }
+
+    #Dreieck{
+        width:50px;
+        height:50px;
+    }
+
+    #Viereck{
+        width:100px;
+        height:100px;
+    }
+
+ }
