--- a/Aufgabe_2.3/style.css
+++ b/Aufgabe_2.3/style.css
@@ -9,6 +9,12 @@ h1 {
     font-size: 25px;
 }
 
+h2 {
+    color: darkorchid;
+    text-align: center;
+    font-size: 25px;
+}
+
 p {
     color: darkorchid;
     text-align: center;
@@ -81,8 +87,8 @@ img {
     }
 
     #Dreieck{
-        width:50px;
-        height:50px;
+        width:100px;
+        height:100px;
     }
 
     #Viereck{
