--- a/Aufgabe_2.3/style.css
+++ b/Aufgabe_2.3/style.css
@@ -27,6 +27,10 @@ i {
     font-size: 20px;
 }
 
+a:link {
+    text-decoration: none; 
+}
+
 div {
     background-color: whitesmoke;
     width: auto;
@@ -44,12 +48,6 @@ select {
     background: lightcyan;
 }
 
-button {
-    font-size: 15px;
-    background-color:lightblue;
-    text-align: center;
-    vertical-align: middle;
-}
 
 div.Absätze {
     display: block;
@@ -57,10 +55,18 @@ div.Absätze {
 
 img {
     display: block;
-    width: 100x;
+    width: 100px;
     height: 100px;
-
 }
+
+.fertigesBild #RumpfImg {
+    transform: translate(0px, 0px);
+}
+
+.fertigesBild #AntriebImg {
+    transform: translate(0px, 0px);
+}
+
 
 
 @media only screen and (min-width:601px) and (max-width: 1023px){
