--- a/Aufgabe_3.1/style.css
+++ b/Aufgabe_3.1/style.css
@@ -13,3 +13,29 @@ body {
 input {
     margin-bottom: 20px;
 }
+
+h1 {
+    text-align: center; 
+    font-size: 18px;
+}
+
+@media only screen and (min-width:601px) and (max-width: 1023px){
+
+    label, input, button {
+        font-size: 18px;
+    }
+
+    h1 {
+        font-size: 20px;
+    }
+
+}
+
+@media only screen and (max-width:600px){
+
+    label, input, button {
+        font-size: 15px;
+    }
+
+
+ }
