--- a/Aufgabe_3.1/style.css
+++ b/Aufgabe_3.1/style.css
@@ -19,6 +19,10 @@ h1 {
     font-size: 18px;
 }
 
+a { 
+    text-decoration: none;
+}
+
 @media only screen and (min-width:601px) and (max-width: 1023px){
 
     label, input, button {
